# getifaddrs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: ifconfig.rs  ifwatch.rs
src/: lib.rs  unix.rs  windows.rs
