[package]
name = "ifaddrs"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock", "Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.158"

[dependencies]
bitflags = "2.6.0"

[lib]
