[package]
name = "getifaddrs"
version = "0.1.5"
edition = "2021"
description = "A cross-platform library for retrieving network interface information"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mmastrac/getifaddrs"
keywords = ["network", "interface", "ifaddrs", "getifaddrs", "cross-platform"]
categories = ["network-programming", "os::unix-apis", "os::windows-apis"]
readme = "README.md"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock", "Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.158"

[dependencies]
bitflags = "2.6.0"

[lib]
